[gd_scene load_steps=12 format=2]

[ext_resource path="res://Pixel Adventure 2/Enemies/Plant/Idle (44x42).png" type="Texture" id=1]
[ext_resource path="res://Pixel Adventure 2/Enemies/Plant/Hit (44x42).png" type="Texture" id=2]
[ext_resource path="res://Pixel Adventure 2/Enemies/Plant/Attack (44x42).png" type="Texture" id=3]
[ext_resource path="res://Scripts/plant.gd" type="Script" id=4]
[ext_resource path="res://GodotPlatformer2D/Sounds/enemy_hit.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 14 )

[sub_resource type="Animation" id=7]
resource_name = "attack_P"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("plant_idle:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plant_idle:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("plant_idle:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit_p"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("plant_idle:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plant_idle:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("plant_idle:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_P"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("plant_idle:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plant_idle:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("plant_idle:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 169.296

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 13, 4 )

[node name="plant" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 4 )

[node name="plant_idle" type="Sprite" parent="."]
position = Vector2( -1, -20 )
texture = ExtResource( 3 )
offset = Vector2( -3, -1 )
hframes = 8

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -14 )
shape = SubResource( 9 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle_P"
reset_on_save = false
playback_speed = 0.5
anims/attack_P = SubResource( 7 )
anims/hit_p = SubResource( 5 )
anims/idle_P = SubResource( 2 )

[node name="spawnshoot" type="Position2D" parent="."]
position = Vector2( -24, -26 )

[node name="playerdetector" type="Area2D" parent="."]
position = Vector2( 0, -14 )
collision_layer = 0

[node name="shape" type="CollisionShape2D" parent="playerdetector"]
position = Vector2( 0, -6 )
shape = SubResource( 8 )

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( 0, -20 )
collision_layer = 64

[node name="shape" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, -13 )
shape = SubResource( 10 )

[node name="Plat_hit_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[connection signal="body_entered" from="playerdetector" to="." method="_on_playerdetector_body_entered"]
[connection signal="body_exited" from="playerdetector" to="." method="_on_playerdetector_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
